# MirasEngine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  vk_globals.cpp
src/shaders/: triangle.frag  triangle.vert
